--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div id="home" class="d-flex justify-content-center align-items-center flex-column py-5 mt-5">
     <div class="image">
-        <img src="../../assets/avataaars.svg" alt="">
+        <img src="./assets/avataaars.svg" alt="">
     </div>
     <h3 class="text-white text-center py-3">
         START FRAMEWORK
