--- a/src/app/page-info/page-info.component.html
+++ b/src/app/page-info/page-info.component.html
@@ -1,22 +1,32 @@
-<div class="info d-flex justify-content-evenly align-items-center pt-5">
-    <div class="location text-center">
-        <h3>LOCATION</h3>
-        <p> 2215 John Daniel Drive</p>
-        <p>Clark, MO 65243</p>
-    </div>
-    <div class="around-the-web">
-        <h3>AROUND THE WEB</h3>
-        <div class="d-flex justify-content-center ">
-            <i class="icon fa-brands fa-facebook"></i>
-            <i class="icon fa-brands fa-twitter"></i>
-            <i class="icon fa-brands fa-linkedin-in"></i>
-            <i class="icon fa-solid fa-globe"></i>
+<div class="layout">
+    <div class="info container pt-5">
+        <div class="row">
+            <div class="col-lg-4">
+                <div class="location text-center">
+                    <h2>LOCATION</h2>
+                    <p> 2215 John Daniel Drive</p>
+                    <p>Clark, MO 65243</p>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="around-the-web">
+                    <h2 class="text-center">AROUND THE WEB</h2>
+                    <div class="d-flex justify-content-center ">
+                        <i class="icon fa-brands fa-facebook"></i>
+                        <i class="icon fa-brands fa-twitter"></i>
+                        <i class="icon fa-brands fa-linkedin-in"></i>
+                        <i class="icon fa-solid fa-globe"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="about-freelancer text-center">
+                    <h2  >ABOUT FREELANCER</h2>
+                    <p >Freelance is a free to use, licensed Bootstrap theme <br>created by Route
+                    </p>
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="about-freelancer text-center">
-        <h3  >ABOUT FREELANCER</h3>
-        <p >Freelance is a free to use, licensed Bootstrap theme <br>created by Route
-        </p>
     </div>
 </div>
 <p class="rights">Copyright © Your Website 2021</p>
