--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -8,7 +8,7 @@
             <div class="row g-5">
                 <div class="col-md-4">
                     <div class="image">
-                        <img src="../../assets/poert1.png" alt="" class="w-100">
+                        <img src="./assets/poert1.png" alt="" class="w-100">
                         <div class="img-layer d-flex justify-content-center align-items-center" (mouseenter)="onHoverCheck=true" (mouseleave)="onHoverCheck=false"
                         [ngStyle]="{ 
                             'opacity': onHoverCheck==true ? '0.9' : '0',
@@ -21,7 +21,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="image">
-                        <img src="../../assets/port2.png" alt="" class="w-100">
+                        <img src="./assets/port2.png" alt="" class="w-100">
                         <div class="img-layer d-flex justify-content-center align-items-center" (mouseenter)="this.onHoverCheck=true" (mouseleave)="onHoverCheck=false"
                         [ngStyle]="{ 
                             'opacity': onHoverCheck==true ? '0.9' : '0',
@@ -34,22 +34,22 @@
                 </div>
                 <div class="col-md-4">
                     <div class="image">
-                        <img src="../../assets/port3.png" alt="" class="w-100">
+                        <img src="./assets/port3.png" alt="" class="w-100">
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="image">
-                        <img src="../../assets/poert1.png" alt="" class="w-100">
+                        <img src="./assets/poert1.png" alt="" class="w-100">
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="image">
-                        <img src="../../assets/port2.png" alt="" class="w-100">
+                        <img src="./assets/port2.png" alt="" class="w-100">
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="image">
-                        <img src="../../assets/port3.png" alt="" class="w-100">
+                        <img src="./assets/port3.png" alt="" class="w-100">
                     </div>
                 </div>
             </div>
